# totally-not-rabbitmq

./: .dockerignore  .gitignore  .hdoc.toml  CMakeLists.txt  INTERNAL_API.md  README.md  conandata.yml  main.cpp
.github/workflows/: docs-dev-branch.yaml  docs.yaml
.run/: CLIENT rabbitClientL3cmd.run.xml  SERVER rabbitServerL3cmd.run.xml  WORKER1 rabbitWorkerL3cmd.run.xml
client/: main.cpp  main.h
docker/: docker-compose.yml
docker/server/: Dockerfile
docker/worker/: Dockerfile
docs/: Building.md
examples/: client.cpp  server.cpp
protocol/: L2Base.cpp  L2Base.h  STIP.cpp  STIP.h
server/: main.cpp  main.h
src/: CMakeLists.txt
src/DataModel/: Client.h  Message.h  Task.h  TaskRequest.h  TaskResult.h  Worker.h
src/client/: STIPClient.cpp  STIPClient.h  client.cpp  client.h
src/cmd/: clientMain.cpp  serverMain.cpp  workerMain.cpp
src/docker/: docker-compose.yml
src/docker/client/: Dockerfile
src/docker/server/: Dockerfile
src/protocol/: CMakeLists.txt  Commands.h  Connection.cpp  Connection.h  STIP.cpp  STIP.h  STIPVersion.h  Session.cpp  Session.h  SessionKiller.cpp  SessionKiller.h
src/protocol/errors/: STIP_errors.h
src/rabbitCore/: proto.md
src/rabbitCore/client/: RabbitClient.cpp  RabbitClient.h
src/rabbitCore/server/: RabbitServer.cpp  RabbitServer.h
src/rabbitCore/worker/: RabbitWorker.cpp  RabbitWorker.h
src/server/: STIPServer.cpp  STIPServer.h  server.cpp  server.h
src/services/: TaskService.cpp  TaskService.h
src/services/TaskQueue/: TaskQueue.h
src/services/TaskService/: TaskService.cpp  TaskService.h
src/services/UserDBService/: UserDBService.cpp  UserDBService.h
src/utils/: Timer.h
tests/: CMakeLists.txt  UdpProxy.cpp  testBigData.cpp  testPacketsLoss.cpp  testStipSend.cpp
tests/util/: UdpProxy.cpp  UdpProxy.h
web/: requirements.txt  web.py
web/templates/: index.html
